chore: upgrade to spring boot 2.5 rc1 and gradle 7.0.2